@@ -10,6 +10,8 @@ ViSP 2.6.3 (under development version)
   - New features
   - Improvements
   - Bug fixed
+     - [14481] testFeatureSegment can lead to an exception.
+
 ----------------------------------------------
 ViSP 2.6.2 (released June 29, 2012)
   - New features
